--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <table >
                         <tbody>
                           <tr>
-                            <th colspan="3">Nissan</th>
+                            <th id="thOne" colspan="3">Nissan</th>
                           </tr>
                           <tr>
                             <th>Модель</th>
