--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-   <div style="font-size: 30px;">123</div>
+    <div style="display: none; font-size: 30px;">123</div>
 
     <div class="wrapper">
 
